Add sample-accurate metronome audio scheduler

--- a/app.json
+++ b/app.json
@@ -26,6 +26,8 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
+      "expo-dev-client",
+      "react-native-audio-api",
       [
         "expo-splash-screen",
         {
