Add android.package to app config

--- a/app.json
+++ b/app.json
@@ -3,6 +3,7 @@
     "name": "NotMetronome",
     "slug": "NotMetronome",
     "version": "1.0.0",
+    "runtimeVersion": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "scheme": "notmetronome",
