--- a/package.json
+++ b/package.json
@@ -1,53 +1,53 @@
-﻿{
-    "name":  "notmetronome",
-    "main":  "expo/AppEntry",
-    "version":  "1.0.0",
-    "scripts":  {
-                    "start":  "expo start",
-                    "start:dev":  "expo start --dev-client",
-                    "reset-project":  "node ./scripts/reset-project.js",
-                    "android":  "expo start --android",
-                    "ios":  "expo start --ios",
-                    "web":  "expo start --web",
-                    "lint":  "expo lint",
-                    "build:tests":  "tsc --project tsconfig.test.json",
-                    "test:unit":  "npm run build:tests \u0026\u0026 node -e \"const fs=require(\u0027fs\u0027); const path=require(\u0027path\u0027); const dir=path.join(\u0027build-tests\u0027,\u0027tests\u0027,\u0027unit\u0027); const files=fs.readdirSync(dir).filter(f=\u003ef.endsWith(\u0027.test.js\u0027)).map(f=\u003epath.join(dir,f)); if(!files.length){console.error(\u0027No unit tests found in \u0027+dir); process.exit(1);} require(\u0027child_process\u0027).execFileSync(process.execPath,[\u0027--test\u0027,...files],{stdio:\u0027inherit\u0027});\"",
-                    "test":  "npm run test:unit"
-                },
-    "dependencies":  {
-                         "@expo/vector-icons":  "^15.0.3",
-                         "@react-navigation/bottom-tabs":  "^7.4.0",
-                         "@react-navigation/elements":  "^2.6.3",
-                         "@react-navigation/native":  "^7.1.25",
-                         "@react-navigation/native-stack":  "^7.8.6",
-                         "expo":  "~54.0.27",
-                         "expo-constants":  "~18.0.11",
-                         "expo-dev-client":  "~4.0.33",
-                         "expo-font":  "~14.0.10",
-                         "expo-haptics":  "~15.0.8",
-                         "expo-image":  "~3.0.11",
-                         "expo-linking":  "~8.0.10",
-                         "expo-splash-screen":  "~31.0.12",
-                         "expo-status-bar":  "~3.0.9",
-                         "expo-symbols":  "~1.0.8",
-                         "expo-system-ui":  "~6.0.9",
-                         "expo-web-browser":  "~15.0.10",
-                         "react":  "19.1.0",
-                         "react-dom":  "19.1.0",
-                         "react-native":  "0.81.5",
-                         "react-native-gesture-handler":  "~2.28.0",
-                         "react-native-reanimated":  "~4.1.1",
-                         "react-native-safe-area-context":  "~5.6.0",
-                         "react-native-screens":  "~4.16.0",
-                         "react-native-web":  "~0.21.0",
-                         "react-native-worklets":  "0.5.1",
-                         "zustand":  "file:vendor/zustand"
-                     },
-    "devDependencies":  {
-                            "@types/react":  "~19.1.0",
-                            "eslint":  "^9.25.0",
-                            "eslint-config-expo":  "~10.0.0",
-                            "typescript":  "~5.9.2"
-                        },
-    "private":  true
+{
+  "name": "notmetronome",
+  "main": "expo/AppEntry",
+  "version": "1.0.0",
+  "scripts": {
+    "start": "expo start",
+    "start:dev": "expo start --dev-client",
+    "reset-project": "node ./scripts/reset-project.js",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "lint": "expo lint",
+    "build:tests": "tsc --project tsconfig.test.json",
+    "test:unit": "npm run build:tests && node -e \"const fs=require('fs'); const path=require('path'); const dir=path.join('build-tests','tests','unit'); const files=fs.readdirSync(dir).filter(f=>f.endsWith('.test.js')).map(f=>path.join(dir,f)); if(!files.length){console.error('No unit tests found in '+dir); process.exit(1);} require('child_process').execFileSync(process.execPath,['--test',...files],{stdio:'inherit'});\"",
+    "test": "npm run test:unit"
+  },
+  "dependencies": {
+    "@expo/vector-icons": "^15.0.3",
+    "@react-navigation/bottom-tabs": "^7.4.0",
+    "@react-navigation/elements": "^2.6.3",
+    "@react-navigation/native": "^7.1.25",
+    "@react-navigation/native-stack": "^7.8.6",
+    "expo": "~54.0.27",
+    "expo-constants": "~18.0.11",
+    "expo-dev-client": "~6.0.20",
+    "expo-font": "~14.0.10",
+    "expo-haptics": "~15.0.8",
+    "expo-image": "~3.0.11",
+    "expo-linking": "~8.0.10",
+    "expo-splash-screen": "~31.0.12",
+    "expo-status-bar": "~3.0.9",
+    "expo-symbols": "~1.0.8",
+    "expo-system-ui": "~6.0.9",
+    "expo-web-browser": "~15.0.10",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.5",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-web": "~0.21.0",
+    "react-native-worklets": "0.5.1",
+    "zustand": "file:vendor/zustand"
+  },
+  "devDependencies": {
+    "@types/react": "~19.1.0",
+    "eslint": "^9.25.0",
+    "eslint-config-expo": "~10.0.0",
+    "typescript": "~5.9.2"
+  },
+  "private": true
 }
