feat(audio): add native expo module and fix multi-bar + per-beat subdiv playback

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,7 @@ build-tests/
 
 expo-env.d.ts
 # @end expo-cli
+/android/
+/_autolink.log
+/notmetronome-audio-engine/android/build/
+/notmetronome-audio-engine/android/.gradle/
