--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "start": "expo start",
     "start:dev": "expo start --dev-client",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "expo lint",
     "build:tests": "tsc --project tsconfig.test.json",
@@ -32,6 +32,7 @@
     "expo-symbols": "~1.0.8",
     "expo-system-ui": "~6.0.9",
     "expo-web-browser": "~15.0.10",
+    "notmetronome-audio-engine": "file:notmetronome-audio-engine",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
