fix: resolve merge markers + align audio hook/navigation types

--- a/notmetronome-audio-engine/expo-module.config.json
+++ b/notmetronome-audio-engine/expo-module.config.json
@@ -1,9 +1,10 @@
 {
   "name": "notmetronome-audio-engine",
-  "platforms": ["android"],
+  "platforms": ["android", "apple"],
+  "apple": {
+    "modules": ["NotmetronomeAudioEngineModule"]
+  },
   "android": {
-    "modules": [
-      "expo.modules.notmetronomeaudioengine.NotmetronomeAudioEngineModule"
-    ]
+    "modules": ["expo.modules.notmetronomeaudioengine.NotmetronomeAudioEngineModule"]
   }
 }
